[package]
name = "addon-distributor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.205"
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.14", features = ["derive"] }
oci-client = { version = "0.11.0", features = ["rustls-tls"], default_features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
docker_credential = "1.3.1"
